# anonidata

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  DIAGNOSTICO_COORDENADAS.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md  RESULTADOS_TEST.md  VERIFICATION_CHECKLIST.md  anonidata-backend.spec  build.js  compile_windows.bat  forge.config.js  forge.config.windows-arm.js  forge.config.windows.js  index.html  package-lock.json  package.json  reproduce_matrix.py  reproduce_rotated_gen.py  reproduce_rotation_issue.py  setup.ps1  setup.sh  tailwind.config.js  test_annotations.py  test_coordinates.py  test_detection.py  test_pii_detection.py  test_rotation_backend.py  test_transformation.py  test_ubicacion.py  tsconfig.json  tsconfig.main.json  tsconfig.node.tsbuildinfo  vite.config.ts
.agent/workflows/: build-distribution.md
.agents/: AGENTS.md
.github/scripts/: deploy-to-drive.py
backend/: anonidata-backend-win.spec  anonidata-backend.spec  main.py  pytest.ini  requirements.txt  setup.py  test_dni_actual.py  test_ner_improved.py  test_ner_simple.py  test_pdf_detection.py  test_pdf_integration.py  test_pdf_text.py  test_regex_dni.py  test_review_workflow.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md  QUICKSTART.md
scripts/: build-backend.sh
src/: vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  hooks.nsh  tauri.conf.json
src-tauri/binaries/: anonidata-backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs
(+43 files in other folders)
